--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: bayesELcpp
 Type: Package
-Title: Bayesian Empicial Likelihood(cpp)
+Title: Bayesian Empicial Likelihood(cpp test)
 Version: 0.1.0
 Date: 2020-11-27
 Author: Who wrote it
