--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(el.mean)
 export(elMeancpp)
 export(test2sample)
 export(test2sample2)
+export(test2sample2_cpp)
 export(test2sample_cpp)
 importFrom(Matrix,rankMatrix)
 importFrom(Rcpp,sourceCpp)
