--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(elMeancpp)
 export(test2sample)
 export(test2sample2)
 export(test2sample2_cpp)
+export(test2sample777)
+export(test2sample777_cpp)
 export(test2sample_cpp)
 importFrom(Matrix,rankMatrix)
 importFrom(Rcpp,sourceCpp)
