--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(test2sample2)
 export(test2sample2_cpp)
 export(test2sample777)
 export(test2sample777_cpp)
+export(test_bibd)
 importFrom(Matrix,rankMatrix)
 importFrom(Rcpp,sourceCpp)
 useDynLib(bayesELcpp, .registration = TRUE)
