--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1.0
 Date: 2021-04-26
 Authors@R: person("Eunseop", "Kim", email = "markean@protonmail.com", role = c("aut", "cre"))
 Description: Empicial Likelihood
-    Empicial Likelihood
+    Empicial Likelihood.
 License: LGPL (>= 3)
 Imports: 
     Matrix,
