package name changed

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,4 +10,4 @@ export(test2sample777_cpp)
 export(test_bibd)
 importFrom(Matrix,rankMatrix)
 importFrom(Rcpp,sourceCpp)
-useDynLib(bayesELcpp, .registration = TRUE)
+useDynLib(elmulttest, .registration = TRUE)
