--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,4 @@
-Package: bayesELcpp
-Type: Package
+Package: elmulttest
 Title: Empicial Likelihood
 Version: 0.1.0
 Date: 2021-04-26
@@ -7,11 +6,14 @@ Authors@R: person("Eunseop", "Kim", email = "markean@protonmail.com", role = c("
 Description: Empicial Likelihood
     Empicial Likelihood.
 License: LGPL (>= 3)
+Depends: R (>= 3.0.2)
 Imports: 
-    Matrix,
-    Rcpp,
-    stats
-LinkingTo: Rcpp, RcppArmadillo
+    Matrix (>= 1.3.2),
+    Rcpp (>= 1.0.6),
+    stats (>= 4.0.5)
+LinkingTo: 
+    Rcpp (>= 1.0.6),
+    RcppArmadillo
 Encoding: UTF-8
 RoxygenNote: 7.1.1
 Suggests: 
