--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,15 +5,15 @@ Date: 2021-04-26
 Authors@R: person("Eunseop", "Kim", email = "markean@protonmail.com", role = c("aut", "cre"))
 Description: Empicial Likelihood
     Empicial Likelihood for multiple hypothesis testing.
-License: LGPL (>= 3)
-Depends: R (>= 3.0.2)
+License: GPL (>= 2)
+Depends: R (>= 3.3.0)
 Imports: 
     Matrix (>= 1.3.2),
     Rcpp (>= 1.0.6),
     stats (>= 4.0.5)
 LinkingTo: 
     Rcpp (>= 1.0.6),
-    RcppArmadillo
+    RcppArmadillo (>= 0.10.4.0.0)
 Encoding: UTF-8
 RoxygenNote: 7.1.1
 Suggests: 
