--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: elmulttest
 Title: Empicial Likelihood for multiple hypotheses testing
 Version: 0.1.0
 Date: 2021-04-26
-Authors@R: person("Eunseop", "Kim", email = "markean@protonmail.com", role = c("aut", "cre"))
+Authors@R: c(person("Eunseop", "Kim", email = "markean@protonmail.com", role = c("aut", "cre")), person("Peruggia", "Mario", email = "peruggia@stat.osu.edu", role = c("aut")), person("MacEachern", "Steve", email = "snm@stat.osu.edu", role = c("aut")))
 Description: Empicial Likelihood
     Empicial Likelihood for multiple hypothesis testing.
 License: GPL (>= 2)
