--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: elmulttest
-Title: Empicial Likelihood for multiple hypotheses testing
+Title: Empicial Likelihood for Multiple Hypothesis Testing
 Version: 0.1.0
 Date: 2021-04-26
 Authors@R: c(person("Eunseop", "Kim", email = "markean@protonmail.com", role = c("aut", "cre")), person("Peruggia", "Mario", email = "peruggia@stat.osu.edu", role = c("aut")), person("MacEachern", "Steve", email = "snm@stat.osu.edu", role = c("aut")))
