--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,7 @@ Version: 0.1.0
 Date: 2021-04-26
 Authors@R: c(person("Eunseop", "Kim", email = "markean@protonmail.com", role = c("aut", "cre")), person("Peruggia", "Mario", email = "peruggia@stat.osu.edu", role = c("aut")), person("MacEachern", "Steve", email = "snm@stat.osu.edu", role = c("aut")))
 Description: Empicial Likelihood
-    Empicial Likelihood for multiple hypothesis testing.
-License: GPL (>= 2)
+    Empicial likelihood for multiple hypothesis testing.
 Depends: R (>= 3.3.0)
 Imports: 
     Matrix (>= 1.3.2),
@@ -14,6 +13,8 @@ Imports:
 LinkingTo: 
     Rcpp (>= 1.0.6),
     RcppArmadillo (>= 0.10.4.0.0)
+License: GPL (>= 2)    
+URL: https://github.com/markean/elmulttest
 Encoding: UTF-8
 RoxygenNote: 7.1.1
 Suggests: 
