--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(test2sample2)
 export(test2sample2_cpp)
 export(test2sample777)
 export(test2sample777_cpp)
-export(test_bibd)
+export(test_pair)
 importFrom(Matrix,rankMatrix)
 importFrom(Rcpp,sourceCpp)
 useDynLib(elmulttest, .registration = TRUE)
