--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(el.mean)
 export(el_mean)
 export(pairwise_test)
+export(pairwise_threshold)
 export(test2sample)
 export(test2sample2)
 export(test2sample2_cpp)
