linear hypothesis fixed

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(el.mean)
 export(el_mean)
+export(el_mean2)
 export(pairwise_test)
 export(pairwise_threshold)
 export(test2sample)
@@ -9,6 +10,7 @@ export(test2sample2)
 export(test2sample2_cpp)
 export(test2sample777)
 export(test2sample777_cpp)
+export(test_ibd)
 export(test_pair)
 importFrom(Matrix,rankMatrix)
 importFrom(Rcpp,sourceCpp)
