--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,7 @@
 export(el.mean)
 export(el_mean)
 export(el_mean2)
-export(pairwise_test)
+export(pairwise_ibd)
 export(pairwise_threshold)
 export(test2sample)
 export(test2sample2)
