--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(el.mean)
 export(el_mean)
 export(el_mean2)
+export(pairwise_PB_ibd)
 export(pairwise_ibd)
 export(test2sample)
 export(test2sample2)
