--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(el.mean)
 export(el_mean)
 export(el_mean2)
+export(ff)
 export(minP_pairwise_ibd)
 export(pairwise_PB_ibd)
 export(pairwise_ibd)
@@ -10,6 +11,7 @@ export(test2sample)
 export(test2sample2)
 export(test2sample777)
 export(test_ibd)
+export(tt)
 importFrom(Matrix,rankMatrix)
 importFrom(Rcpp,sourceCpp)
 useDynLib(elmulttest, .registration = TRUE)
