--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,22 +1,17 @@
 Package: elmulttest
+Type: Package
 Title: Empicial Likelihood for Multiple Hypothesis Testing
-Version: 0.1.0
-Date: 2021-04-26
+Version: 1.0
+Date: 2021-06-21
 Authors@R: c(person("Eunseop", "Kim", email = "markean@protonmail.com", role = c("aut", "cre")))
+Depends: R (>= 3.4.0)
 Description: Empicial Likelihood
     Empicial likelihood for multiple hypothesis testing.
-Depends: R (>= 3.4.0)
-Imports: 
-    Matrix (>= 1.3.2),
-    Rcpp (>= 1.0.6),
-    stats (>= 4.0.5)
-LinkingTo: 
-    Rcpp (>= 1.0.6),
-    RcppArmadillo (>= 0.10.4.0.0)
-License: GPL (>= 2)    
-URL: https://github.com/markean/elmulttest
+License: GPL (>= 2)
+Suggests: tinytest
 Encoding: UTF-8
 RoxygenNote: 7.1.1
-Suggests: 
-    testthat (>= 3.0.0)
-Config/testthat/edition: 3
+Imports: Rcpp (>= 1.0.6)
+LinkingTo: 
+    Rcpp, 
+    RcppEigen
