--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,9 @@ License: GPL (>= 2)
 Suggests: tinytest
 Encoding: UTF-8
 RoxygenNote: 7.1.1
-Imports: Rcpp (>= 1.0.6)
+Imports: 
+    Rcpp (>= 1.0.6),
+    Matrix (>= 1.3.2)
 LinkingTo: 
     Rcpp, 
     RcppEigen
