--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,6 @@
 useDynLib(elmulttest)
 importFrom(Rcpp, evalCpp)
+importFrom(Matrix, rankMatrix)
 ## export all regularly named functions
 ## (but allow for private functions whose name starts with a dot).name <- function(...)
 exportPattern("^[[:alpha:]]+")
