--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ export(ELmht)
 export(ELtest)
 export(el_mean)
 export(el_pairwise)
-export(test_ibd)
+export(test_gbd)
 importFrom(Rcpp,sourceCpp)
 importFrom(stats,reshape)
 useDynLib(elmulttest, .registration = TRUE)
