dedicated function for pairwise comparison added. syntax changed for using formula. documentation needs to be done.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,10 @@ export(ELmht)
 export(ELtest)
 export(el_mean)
 export(el_pairwise)
+export(pairwise)
 export(test_gbd)
 importFrom(Rcpp,sourceCpp)
+importFrom(stats,printCoefmat)
 importFrom(stats,reshape)
+importFrom(stats,terms)
 useDynLib(elmulttest, .registration = TRUE)
