--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: elmulttest
 Type: Package
-Title: Empicial Likelihood for Multiple Hypothesis Testing
+Title: Empirical Likelihood for Multiple Hypothesis Testing
 Version: 1.0.0
-Description: Multiple hypothesis testing via empicial likelihood in general 
+Description: Multiple hypothesis testing via empirical likelihood in general 
     block designs. It provides asymptotic generalized family-wise 
     error rate control.
 License: GPL (>= 2)
