name changed to melt

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,4 +9,4 @@ importFrom(Rcpp,sourceCpp)
 importFrom(stats,printCoefmat)
 importFrom(stats,reshape)
 importFrom(stats,terms)
-useDynLib(elmulttest, .registration = TRUE)
+useDynLib(melt, .registration = TRUE)
