--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,11 @@
 Package: melt
 Type: Package
 Title: Multiple Empirical Likelihood Tests
-Version: 1.0.0
+Version: 1.0.1
 Description: Multiple hypothesis testing via empirical likelihood in general 
     block designs. It provides asymptotic generalized family-wise 
     error rate control.
 License: GPL (>= 2)
-Authors@R: person("Eunseop", "Kim", email = "kim.7302@osu.edu", role = c("aut", "cre"))
 Depends: R (>= 3.5.0)
 Imports: 
     Rcpp (>= 1.0.6),
@@ -18,3 +17,9 @@ LinkingTo:
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.2
+NeedsCompilation:	yes
+Authors@R: person("Eunseop", "Kim", email = "kim.7302@osu.edu", role = c("aut", "cre"))
+
+
+
+
