--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,9 @@ Package: melt
 Type: Package
 Title: Multiple Empirical Likelihood Tests
 Version: 1.0.1
-Description: Multiple hypothesis testing via empirical likelihood in general 
-    block designs. It provides asymptotic generalized family-wise 
-    error rate control.
+Description: Multiple testing via empirical likelihood for 
+    the analysis of experimental designs. Details of the testing
+    procedures are given in Kim et al. (2021) <arxiv:2112.09206>.
 License: GPL (>= 2)
 Depends: R (>= 3.5.0)
 Imports: 
@@ -18,7 +18,17 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.2
 NeedsCompilation:	yes
-Authors@R: person("Eunseop", "Kim", email = "kim.7302@osu.edu", role = c("aut", "cre"))
+Authors@R: 
+    c(person(given = "Eunseop", 
+             family = "Kim", 
+             email = "kim.7302@osu.edu", 
+             role = c("aut", "cre")),
+      person(given = "Steve",
+             family = "MacEachern",
+             role = c("aut", "ths")),
+      person(given = "Mario",
+             family = "Peruggia",
+             role = c("aut", "ths")))
 
 
 
