--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,8 @@ Package: melt
 Type: Package
 Title: Multiple Empirical Likelihood Tests
 Version: 1.0.1
-Description: Multiple testing via empirical likelihood for 
-    the analysis of experimental designs. Details of the testing
-    procedures are given in Kim et al. (2021) <arxiv:2112.09206>.
+Description: Empirical likelihood-based multiple testing for the analysis of experimental designs.
+    Details of the testing procedures are given in Kim et al. (2021) <arxiv:2112.09206>.
 URL: https://github.com/markean/melt
 BugReports: https://github.com/markean/melt/issues
 License: GPL (>= 2)
