NAMESPACE and documentation updated.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,8 +13,16 @@ export(el_pairwise)
 export(el_test)
 importFrom(Rcpp,sourceCpp)
 importFrom(stats,.getXlevels)
+importFrom(stats,coef)
+importFrom(stats,is.empty.model)
+importFrom(stats,model.matrix)
+importFrom(stats,model.response)
+importFrom(stats,naprint)
+importFrom(stats,pchisq)
 importFrom(stats,printCoefmat)
+importFrom(stats,quantile)
 importFrom(stats,reshape)
 importFrom(stats,setNames)
 importFrom(stats,terms)
+importFrom(stats,var)
 useDynLib(melt, .registration = TRUE)
