--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: melt
 Type: Package
 Title: Multiple Empirical Likelihood Tests
-Version: 1.1.0
-Description: Empirical likelihood-based multiple testing for the analysis of experimental designs.
-    Details of the testing procedures are given in Kim et al. (2021) <arxiv:2112.09206>.
+Version: 1.2.0
+Description: Empirical likelihood-based multiple testing for the analysis of experimental designs. 
+  Details of the testing procedures are given in Kim et al. (2021) <arxiv:2112.09206>. Additional functions for regression analysis are included.
 URL: https://github.com/markean/melt
 BugReports: https://github.com/markean/melt/issues
 License: GPL (>= 2)
-Depends: R (>= 3.6.3)
+Depends: R (>= 3.6.0)
 Imports: 
     Rcpp (>= 1.0.6),
     stats
