--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,9 +9,11 @@ BugReports: https://github.com/markean/melt/issues
 License: GPL (>= 2)
 Depends: R (>= 3.6.0)
 Imports: 
+    cli,
     Rcpp (>= 1.0.6),
     stats
 LinkingTo: 
+    cli,
     Rcpp, 
     RcppEigen,
     RcppProgress
