weights function added for el_test class and added a badge

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ S3method(print,el_test)
 S3method(print,pairwise)
 S3method(print,summary.el_lm)
 S3method(summary,el_lm)
+S3method(weights,el_test)
 export(el_aov)
 export(el_lm)
 export(el_mean)
