--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,7 @@ LinkingTo:
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.2
-NeedsCompilation:	yes
+NeedsCompilation: yes
 Authors@R: 
     c(person(given = "Eunseop", 
              family = "Kim", 
@@ -32,7 +32,6 @@ Authors@R:
       person(given = "Mario",
              family = "Peruggia",
              role = c("aut", "ths")))
-
-
-
-
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
