EL2 class (evaluation) uses member initilaizatoin list. el_test2 function is temporarily added for evaluation hypothesis testing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(el_lm)
 export(el_mean)
 export(el_pairwise)
 export(el_test)
+export(el_test2)
 importFrom(Rcpp,sourceCpp)
 importFrom(stats,.getXlevels)
 importFrom(stats,coef)
