--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,7 @@ export(el_lm)
 export(el_mean)
 export(el_pairwise)
 export(el_test)
-export(el_test2)
+export(lht)
 importFrom(Rcpp,sourceCpp)
 importFrom(stats,.getXlevels)
 importFrom(stats,coef)
