README, DESCRIPTION updated

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,9 @@
 
 S3method(confint,el_test)
 S3method(formula,el_lm)
-S3method(logLik,el_lm)
+S3method(logLik,el_test)
 S3method(print,el_aov)
+S3method(print,el_lht)
 S3method(print,el_lm)
 S3method(print,el_test)
 S3method(print,pairwise)
