--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,13 @@ Package: melt
 Type: Package
 Title: Multiple Empirical Likelihood Tests
 Version: 1.3.0.9000
-Description: Empirical likelihood-based multiple testing for the analysis of experimental designs. 
-  Details of the testing procedures are given in Kim et al. (2021) <arxiv:2112.09206>. Additional functions for regression analysis are included.
+Description: Performs multiple empirical likelihood tests for regression analysis. 
+    Much of its functionality and syntax mimics the corresponding base R functions. 
+    The core computational routines are implemented with the 'Eigen' C++ library 
+    and 'RcppEigen' interface, with OpenMP for parallel computation. Additional 
+    functions are available for multiple testing for the analysis of experimental 
+    designs. Details of the testing procedures are given in Kim et al. (2021) 
+    <arxiv:2112.09206>. 
 URL: https://github.com/markean/melt
 BugReports: https://github.com/markean/melt/issues
 License: GPL (>= 2)
