vignette skeleton added.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,5 +36,8 @@ Authors@R:
              role = c("aut", "ths")))
 Suggests: 
     covr,
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+VignetteBuilder: knitr
