--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ S3method(print,summary.el_lm)
 S3method(summary,el_lm)
 export(el_aov)
 export(el_eval)
+export(el_glm)
 export(el_lm)
 export(el_mean)
 export(el_pairwise)
