el_mean model argument added. lht argument order changed. weighted EL seems to use different weights for cutoff.

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -6,11 +6,12 @@
 ^LICENSE\.md$
 ^cran-comments\.md$
 ^\.vscode$
+^\.VSCodeCounter$
 ^ignore$
 ^data-raw$
 ^CRAN-RELEASE$
 ^CRAN-SUBMISSION$
 ^\.github$
-
+^CONTRIBUTING\.md$
 ^codecov\.yml$
 ^codemeta\.json$
