--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,8 @@ importFrom(stats,.getXlevels)
 importFrom(stats,coef)
 importFrom(stats,complete.cases)
 importFrom(stats,formula)
+importFrom(stats,gaussian)
+importFrom(stats,glm.fit)
 importFrom(stats,is.empty.model)
 importFrom(stats,model.matrix)
 importFrom(stats,model.response)
