--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(el_lm)
 export(el_mean)
 export(el_pairwise)
 export(el_test)
+export(eld)
 export(lht)
 importFrom(Rcpp,sourceCpp)
 importFrom(stats,.getXlevels)
