melt_control added with documentation. It replaces check_control.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,8 @@ S3method(logLik,el)
 S3method(plot,eld)
 S3method(print,el)
 S3method(print,el_aov)
-S3method(print,el_lht)
 S3method(print,el_lm)
+S3method(print,elt)
 S3method(print,pairwise)
 S3method(print,summary.el_lm)
 S3method(summary,el_lm)
@@ -19,6 +19,7 @@ export(el_pairwise)
 export(el_test)
 export(eld)
 export(lht)
+export(melt_control)
 importFrom(Rcpp,sourceCpp)
 importFrom(stats,.getXlevels)
 importFrom(stats,coef)
