el_glm added. el_lm changed. lm, glm coefficients are calcuated in R. lht documentation added.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ S3method(print,summary.el_lm)
 S3method(summary,el_lm)
 export(el_aov)
 export(el_eval)
+export(el_glm)
 export(el_lm)
 export(el_mean)
 export(el_pairwise)
@@ -23,11 +24,16 @@ export(melt_control)
 importFrom(Rcpp,sourceCpp)
 importFrom(stats,.getXlevels)
 importFrom(stats,coef)
-importFrom(stats,complete.cases)
 importFrom(stats,formula)
+importFrom(stats,gaussian)
+importFrom(stats,glm.fit)
 importFrom(stats,is.empty.model)
+importFrom(stats,lm.fit)
+importFrom(stats,lm.wfit)
+importFrom(stats,model.extract)
 importFrom(stats,model.matrix)
 importFrom(stats,model.response)
+importFrom(stats,model.weights)
 importFrom(stats,naprint)
 importFrom(stats,pchisq)
 importFrom(stats,printCoefmat)
