step size added for control_el.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,9 +35,11 @@ Authors@R:
              family = "Peruggia",
              role = c("aut", "ths")))
 Suggests: 
+    spelling,
     covr,
     knitr,
     rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 VignetteBuilder: knitr
+Language: en-US
