--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,11 +5,16 @@ S3method(logLik,el)
 S3method(plot,eld)
 S3method(print,el)
 S3method(print,el_aov)
+S3method(print,el_glm)
 S3method(print,el_lm)
 S3method(print,elt)
 S3method(print,pairwise)
+S3method(print,summary.el_glm)
 S3method(print,summary.el_lm)
+S3method(summary,el_glm)
 S3method(summary,el_lm)
+export(ControlEL)
+export(confreg)
 export(control_el)
 export(el_aov)
 export(el_eval)
@@ -20,9 +25,10 @@ export(el_pairwise)
 export(el_test)
 export(eld)
 export(lht)
+exportClasses(ControlEL)
+exportMethods(coef)
 importFrom(Rcpp,sourceCpp)
 importFrom(stats,.getXlevels)
-importFrom(stats,coef)
 importFrom(stats,gaussian)
 importFrom(stats,glm.fit)
 importFrom(stats,is.empty.model)
