--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,6 @@ S3method(print,summary.el_glm)
 S3method(print,summary.el_lm)
 S3method(summary,el_glm)
 S3method(summary,el_lm)
-export(ControlEL)
 export(confreg)
 export(control_el)
 export(el_aov)
@@ -25,9 +24,8 @@ export(el_pairwise)
 export(el_test)
 export(eld)
 export(lht)
-exportClasses(ControlEL)
-exportMethods(coef)
 importFrom(Rcpp,sourceCpp)
+importFrom(methods,new)
 importFrom(stats,.getXlevels)
 importFrom(stats,gaussian)
 importFrom(stats,glm.fit)
