depends R >= 4.0. el_aov removed. ELD class added.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,7 @@
 
 S3method(confint,el)
 S3method(logLik,el)
-S3method(plot,eld)
 S3method(print,el)
-S3method(print,el_aov)
 S3method(print,el_glm)
 S3method(print,el_lm)
 S3method(print,elt)
@@ -15,7 +13,6 @@ S3method(summary,el_glm)
 S3method(summary,el_lm)
 export(confreg)
 export(control_el)
-export(el_aov)
 export(el_eval)
 export(el_glm)
 export(el_lm)
@@ -24,7 +21,9 @@ export(el_pairwise)
 export(el_test)
 export(eld)
 export(lht)
+exportMethods(plot)
 importFrom(Rcpp,sourceCpp)
+importFrom(graphics,polygon)
 importFrom(methods,new)
 importFrom(stats,.getXlevels)
 importFrom(stats,gaussian)
@@ -41,6 +40,5 @@ importFrom(stats,pchisq)
 importFrom(stats,printCoefmat)
 importFrom(stats,qchisq)
 importFrom(stats,reshape)
-importFrom(stats,setNames)
 importFrom(stats,terms)
 useDynLib(melt, .registration = TRUE)
