EL S4 class adopting.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,17 +11,17 @@ S3method(print,summary.el_glm)
 S3method(print,summary.el_lm)
 S3method(summary,el_glm)
 S3method(summary,el_lm)
-export(confreg)
 export(control_el)
 export(el_eval)
 export(el_glm)
 export(el_lm)
 export(el_mean)
+export(el_mean2)
 export(el_pairwise)
 export(el_test)
-export(eld)
 export(lht)
-exportMethods(plot)
+exportMethods(confreg)
+exportMethods(eld)
 importFrom(Rcpp,sourceCpp)
 importFrom(graphics,polygon)
 importFrom(methods,new)
