--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(el_test)
 export(lht)
 exportMethods(confreg)
 exportMethods(eld)
+exportMethods(plot)
 importFrom(Rcpp,sourceCpp)
 importFrom(graphics,polygon)
 importFrom(methods,new)
