LM class added with methods.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(control_el)
 export(el_eval)
 export(el_glm)
 export(el_lm)
+export(el_lm2)
 export(el_mean)
 export(el_mean2)
 export(el_pairwise)
@@ -23,8 +24,14 @@ export(lht)
 exportMethods(confreg)
 exportMethods(eld)
 exportMethods(plot)
+exportMethods(print)
+exportMethods(summary)
 importFrom(Rcpp,sourceCpp)
+importFrom(graphics,plot.default)
+importFrom(graphics,points)
 importFrom(graphics,polygon)
+importFrom(graphics,text)
+importFrom(methods,is)
 importFrom(methods,new)
 importFrom(stats,.getXlevels)
 importFrom(stats,gaussian)
