--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(el_mean2)
 export(el_pairwise)
 export(el_test)
 export(lht)
+export(lht2)
 exportMethods(confreg)
 exportMethods(eld)
 exportMethods(plot)
