--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(el_mean)
 export(el_pairwise)
 export(el_test)
 export(lht)
+exportMethods(coef)
 exportMethods(confint)
 exportMethods(confreg)
 exportMethods(eld)
