--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(print,pairwise)
 export(el_control)
 export(el_eval)
 export(el_glm)
+export(el_glm2)
 export(el_lm)
 export(el_mean)
 export(el_pairwise)
