--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,11 @@
 Package: melt
 Type: Package
 Title: Multiple Empirical Likelihood Tests
-Version: 1.5.1
-Description: Performs multiple empirical likelihood tests for regression analysis. 
-    Much of its functionality and syntax mimics the corresponding base R functions. 
-    The core computational routines are implemented using the 'Eigen' C++ library 
-    and 'RcppEigen' interface, with OpenMP for parallel computation. Additional 
-    functions are available for multiple testing for the analysis of experimental 
-    designs. Details of the testing procedures are given in Kim et al. (2021) 
-    <arxiv:2112.09206>. 
+Version: 1.5.1.9000
+Description: Performs multiple empirical likelihood tests for linear and generalized linear models. 
+    The core computational routines are implemented using the 'Eigen' C++ library and 'RcppEigen' 
+    interface, with OpenMP for parallel computation. Details of multiple testing procedures are 
+    given in Kim et al. (2021) <arxiv:2112.09206>. 
 URL: https://github.com/markean/melt
 BugReports: https://github.com/markean/melt/issues
 License: GPL (>= 2)
