--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(el_mean)
 export(el_pairwise)
 export(el_test)
 export(lht)
+export(mht)
 exportMethods(coef)
 exportMethods(confint)
 exportMethods(confreg)
