--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ importFrom(stats,model.response)
 importFrom(stats,model.weights)
 importFrom(stats,naprint)
 importFrom(stats,pchisq)
+importFrom(stats,pf)
 importFrom(stats,printCoefmat)
 importFrom(stats,qchisq)
 importFrom(stats,reshape)
