--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,9 +18,10 @@ BugReports: https://github.com/markean/melt/issues
 Depends: 
     R (>= 4.0.0)
 Imports: 
+    lifecycle,
     methods,
     Rcpp (>= 1.0.8),
-    stats
+    stats,
 Suggests: 
     covr,
     knitr,
@@ -35,4 +36,5 @@ Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
 NeedsCompilation: yes
+Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0
