--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(el_glm)
 export(el_lm)
 export(el_mean)
 export(el_pairwise)
+export(elt)
 export(lht)
 exportMethods(coef)
 exportMethods(confint)
@@ -21,6 +22,7 @@ importFrom(graphics,plot.default)
 importFrom(graphics,points)
 importFrom(graphics,polygon)
 importFrom(graphics,text)
+importFrom(lifecycle,deprecated)
 importFrom(methods,is)
 importFrom(methods,new)
 importFrom(stats,.getXlevels)
