bootstrap calibration added.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,8 @@ importFrom(stats,pchisq)
 importFrom(stats,pf)
 importFrom(stats,printCoefmat)
 importFrom(stats,qchisq)
+importFrom(stats,qf)
+importFrom(stats,quantile)
 importFrom(stats,reshape)
 importFrom(stats,terms)
 useDynLib(melt, .registration = TRUE)
