--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,7 @@ BugReports: https://github.com/markean/melt/issues
 Depends: 
     R (>= 4.0.0)
 Imports: 
+    graphics,
     lifecycle,
     methods,
     Rcpp (>= 1.0.8),
@@ -27,7 +28,8 @@ Suggests:
     knitr,
     rmarkdown,
     spelling,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    withr
 LinkingTo: 
     BH,
     dqrng,
