--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ exportMethods(logLik)
 exportMethods(plot)
 exportMethods(print)
 exportMethods(summary)
+exportMethods(weights)
 importFrom(Rcpp,sourceCpp)
 importFrom(graphics,plot.default)
 importFrom(graphics,points)
