--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,6 +36,8 @@ LinkingTo:
     Rcpp,
     RcppEigen,
     RcppProgress
+VignetteBuilder: 
+    knitr
 Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
