elt() changed to a formal method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,12 +6,12 @@ export(el_glm)
 export(el_lm)
 export(el_mean)
 export(elmt)
-export(elt)
 export(lht)
 exportMethods(coef)
 exportMethods(confint)
 exportMethods(confreg)
 exportMethods(eld)
+exportMethods(elt)
 exportMethods(logLik)
 exportMethods(plot)
 exportMethods(print)
