elmt() is a generic function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,11 +5,11 @@ export(el_eval)
 export(el_glm)
 export(el_lm)
 export(el_mean)
-export(elmt)
 exportMethods(coef)
 exportMethods(confint)
 exportMethods(confreg)
 exportMethods(eld)
+exportMethods(elmt)
 exportMethods(elt)
 exportMethods(logLik)
 exportMethods(plot)
