--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,8 @@ Description: Performs multiple empirical likelihood tests for linear and
     generalized linear models. The core computational routines are
     implemented using the 'Eigen' C++ library and 'RcppEigen' interface,
     with OpenMP for parallel computation. Details of multiple testing
-    procedures are given in Kim et al. (2021) <arxiv:2112.09206>.
+    procedures are given in Kim, MacEachern, and Peruggia (2021)
+    <arxiv:2112.09206>.
 License: GPL (>= 2)
 URL: https://github.com/markean/melt
 BugReports: https://github.com/markean/melt/issues
