--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,8 +35,7 @@ LinkingTo:
     BH,
     dqrng,
     Rcpp,
-    RcppEigen,
-    RcppProgress
+    RcppEigen
 VignetteBuilder: 
     knitr
 Config/testthat/edition: 3
