--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,8 +14,7 @@ Description: Performs multiple empirical likelihood tests for linear and
     procedures are given in Kim, MacEachern, and Peruggia (2021)
     <arxiv:2112.09206>.
 License: GPL (>= 2)
-URL: https://github.com/markean/melt,
-    https://markean.github.io/melt/
+URL: https://github.com/markean/melt, https://markean.github.io/melt/
 BugReports: https://github.com/markean/melt/issues
 Depends: 
     R (>= 4.0.0)
@@ -42,5 +41,5 @@ Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
 NeedsCompilation: yes
-Roxygen: list(markdown = TRUE)
+Roxygen: list (markdown = TRUE, roclets = c ("namespace", "rd", "srr::srr_stats_roclet"))
 RoxygenNote: 7.2.0
