--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,6 +40,8 @@ VignetteBuilder:
 Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
+LazyData: true
 NeedsCompilation: yes
-Roxygen: list (markdown = TRUE, roclets = c ("namespace", "rd", "srr::srr_stats_roclet"))
+Roxygen: list (markdown = TRUE, roclets = c ("namespace", "rd",
+    "srr::srr_stats_roclet"))
 RoxygenNote: 7.2.0
