some methods added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,10 +8,13 @@ export(el_mean)
 exportMethods(coef)
 exportMethods(confint)
 exportMethods(confreg)
+exportMethods(conv)
 exportMethods(eld)
 exportMethods(elmt)
 exportMethods(elt)
+exportMethods(formula)
 exportMethods(logLik)
+exportMethods(nobs)
 exportMethods(plot)
 exportMethods(summary)
 exportMethods(weights)
