--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,4 +42,5 @@ importFrom(stats,printCoefmat)
 importFrom(stats,qchisq)
 importFrom(stats,qf)
 importFrom(stats,quantile)
+importFrom(stats,setNames)
 useDynLib(melt, .registration = TRUE)
