--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(el_eval)
 export(el_glm)
 export(el_lm)
 export(el_mean)
+export(el_sd)
 exportMethods(coef)
 exportMethods(confint)
 exportMethods(confreg)
