`logLR()` method added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ exportMethods(eld)
 exportMethods(elmt)
 exportMethods(elt)
 exportMethods(formula)
+exportMethods(logLR)
 exportMethods(logLik)
 exportMethods(nobs)
 exportMethods(plot)
