`print()` method doc added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ exportMethods(logLR)
 exportMethods(logLik)
 exportMethods(nobs)
 exportMethods(plot)
+exportMethods(print)
 exportMethods(summary)
 exportMethods(weights)
 importFrom(Rcpp,sourceCpp)
