`getOptim()` and `logL()` methods added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,8 @@ exportMethods(eld)
 exportMethods(elmt)
 exportMethods(elt)
 exportMethods(formula)
+exportMethods(getOptim)
+exportMethods(logL)
 exportMethods(logLR)
 exportMethods(logLik)
 exportMethods(nobs)
