--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ exportMethods(elmt)
 exportMethods(elt)
 exportMethods(formula)
 exportMethods(getOptim)
+exportMethods(getSigTests)
 exportMethods(logL)
 exportMethods(logLR)
 exportMethods(logLik)
