--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,8 @@ Description: Performs multiple empirical likelihood tests for linear and
     implemented using the 'Eigen' C++ library and 'RcppEigen' interface,
     with OpenMP for parallel computation. Details of multiple testing
     procedures are given in Kim, MacEachern, and Peruggia (2021)
-    <arxiv:2112.09206>.
+    <arxiv:2112.09206>. This work was supported by the U.S. National
+    Science Foundation under Grants No. SES-1921523 and DMS-2015552.
 License: GPL (>= 2)
 URL: https://github.com/markean/melt, https://markean.github.io/melt/
 BugReports: https://github.com/markean/melt/issues
