--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ importFrom(graphics,plot.default)
 importFrom(graphics,points)
 importFrom(graphics,polygon)
 importFrom(graphics,text)
+importFrom(methods,getDataPart)
 importFrom(methods,is)
 importFrom(methods,new)
 importFrom(stats,.getXlevels)
