--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,6 +29,7 @@ Suggests:
     ggplot2,
     knitr,
     microbenchmark,
+    R.rsp,
     rmarkdown,
     spelling,
     testthat (>= 3.0.0),
@@ -39,7 +40,8 @@ LinkingTo:
     Rcpp,
     RcppEigen
 VignetteBuilder: 
-    knitr
+    knitr,
+    R.rsp
 Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
