--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ exportMethods(logLik)
 exportMethods(nobs)
 exportMethods(plot)
 exportMethods(print)
+exportMethods(pval)
 exportMethods(summary)
 exportMethods(weights)
 importFrom(Rcpp,sourceCpp)
