--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ exportMethods(coef)
 exportMethods(confint)
 exportMethods(confreg)
 exportMethods(conv)
+exportMethods(critVal)
 exportMethods(eld)
 exportMethods(elmt)
 exportMethods(elt)
@@ -20,9 +21,9 @@ exportMethods(logL)
 exportMethods(logLR)
 exportMethods(logLik)
 exportMethods(nobs)
+exportMethods(pVal)
 exportMethods(plot)
 exportMethods(print)
-exportMethods(pval)
 exportMethods(summary)
 exportMethods(weights)
 importFrom(Rcpp,sourceCpp)
