--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ exportMethods(eld)
 exportMethods(elmt)
 exportMethods(elt)
 exportMethods(formula)
+exportMethods(getDF)
 exportMethods(getOptim)
 exportMethods(getSigTests)
 exportMethods(logL)
