--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(el_glm)
 export(el_lm)
 export(el_mean)
 export(el_sd)
+exportMethods(chisq)
 exportMethods(coef)
 exportMethods(confint)
 exportMethods(confreg)
@@ -17,7 +18,6 @@ exportMethods(elt)
 exportMethods(formula)
 exportMethods(getDF)
 exportMethods(getOptim)
-exportMethods(getSigTests)
 exportMethods(logL)
 exportMethods(logLR)
 exportMethods(logLik)
@@ -25,6 +25,7 @@ exportMethods(nobs)
 exportMethods(pVal)
 exportMethods(plot)
 exportMethods(print)
+exportMethods(sigTests)
 exportMethods(summary)
 exportMethods(weights)
 importFrom(Rcpp,sourceCpp)
