--- a/.github/workflows/check-standard.yaml
+++ b/.github/workflows/check-standard.yaml
@@ -49,6 +49,6 @@ jobs:
 
       - uses: r-lib/actions/check-r-package@v2
         with:
-          args: 'c("--ignore-vignettes", "--no-manual", "--as-cran")'
-          build_args: 'c("--no-build-vignettes", "--no-manual")'
+          args: 'c("--ignore-vignettes", "--as-cran")'
+          build_args: 'c("--no-build-vignettes")'
           upload-snapshots: true
