--- a/.github/workflows/check-standard.yaml
+++ b/.github/workflows/check-standard.yaml
@@ -31,9 +31,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: r-lib/actions/setup-tinytex@v2
-      - run: tlmgr --version
-
       - uses: r-lib/actions/setup-pandoc@v2
 
       - uses: r-lib/actions/setup-r@v2
@@ -49,6 +46,6 @@ jobs:
 
       - uses: r-lib/actions/check-r-package@v2
         with:
-          args: 'c("--no-manual", "--as-cran")'
-          build_args: 'c("--no-manual")'
+          args: 'c("--ignore-vignettes", "--no-manual", "--as-cran")'
+          build_args: 'c("--no-build-vignettes", "--no-manual")'
           upload-snapshots: true
