methods added for `QGLM` class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ importFrom(methods,getDataPart)
 importFrom(methods,is)
 importFrom(methods,new)
 importFrom(stats,.getXlevels)
+importFrom(stats,fitted)
 importFrom(stats,gaussian)
 importFrom(stats,glm.fit)
 importFrom(stats,is.empty.model)
