--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Type: Package
 Package: melt
 Title: Multiple Empirical Likelihood Tests
-Version: 1.7.0.9000
+Version: 1.7.0.9100
 Authors@R: c(
     person("Eunseop", "Kim", , "kim.7302@osu.edu", role = c("aut", "cre")),
     person("Steven", "MacEachern", role = c("ctb", "ths")),
-    person("Mario", "Peruggia", role = c("ctb", "ths"))
+    person("Mario", "Peruggia", role = c("ctb", "ths")),
+    person("Alex", "Stringer", role = "rev")
   )
 Description: Performs multiple empirical likelihood tests for linear and
     generalized linear models. The core computational routines are
@@ -23,7 +24,8 @@ Imports:
     graphics,
     methods,
     Rcpp,
-    stats
+    stats,
+    utils
 Suggests: 
     covr,
     ggplot2,
@@ -45,7 +47,6 @@ VignetteBuilder:
 Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
-LazyData: true
 NeedsCompilation: yes
 Roxygen: list (markdown = TRUE, roclets = c ("namespace", "rd",
     "srr::srr_stats_roclet"))
