--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ importFrom(stats,lm.fit)
 importFrom(stats,lm.wfit)
 importFrom(stats,model.extract)
 importFrom(stats,model.matrix)
+importFrom(stats,model.offset)
 importFrom(stats,model.response)
 importFrom(stats,model.weights)
 importFrom(stats,naprint)
@@ -59,4 +60,6 @@ importFrom(stats,quantile)
 importFrom(stats,reshape)
 importFrom(stats,setNames)
 importFrom(stats,terms)
+importFrom(utils,head)
+importFrom(utils,tail)
 useDynLib(melt, .registration = TRUE)
