--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -47,6 +47,7 @@ VignetteBuilder:
 Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
+LazyData: true
 NeedsCompilation: yes
 Roxygen: list (markdown = TRUE, roclets = c ("namespace", "rd",
     "srr::srr_stats_roclet"))
