--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ exportMethods(getOptim)
 exportMethods(logL)
 exportMethods(logLR)
 exportMethods(logLik)
+exportMethods(logProb)
 exportMethods(nobs)
 exportMethods(pVal)
 exportMethods(plot)
