--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Type: Package
 Package: melt
 Title: Multiple Empirical Likelihood Tests
-Version: 1.8.0
+Version: 1.8.0.9000
 Authors@R: c(
     person("Eunseop", "Kim", , "kim.7302@osu.edu", role = c("aut", "cre")),
     person("Steven", "MacEachern", role = c("ctb", "ths")),
@@ -53,4 +53,5 @@ Encoding: UTF-8
 Language: en-US
 LazyData: true
 NeedsCompilation: yes
+Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
