--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,10 @@
 Type: Package
 Package: melt
 Title: Multiple Empirical Likelihood Tests
-Version: 1.9.0.9001
+Version: 1.9.0.9002
 Authors@R: c(
-    person("Eunseop", "Kim", , "kim.7302@osu.edu", role = c("aut", "cre")),
+    person("Eunseop", "Kim", email = "kim.7302@osu.edu", 
+            role = c("aut", "cre")),
     person("Steven", "MacEachern", role = c("ctb", "ths")),
     person("Mario", "Peruggia", role = c("ctb", "ths")),
     person("Pierre", "Chausse", role = "rev"),
@@ -16,8 +17,8 @@ Description: Performs multiple empirical likelihood tests for linear and
     computational routines are implemented using the 'Eigen' C++ library
     and 'RcppEigen' interface, with OpenMP for parallel computation.
     Details of the testing procedures are given in Kim, MacEachern, and
-    Peruggia (2021) <arxiv:2112.09206>. This work was supported by the
-    U.S. National Science Foundation under Grants No. SES-1921523 and
+    Peruggia (2023) <doi:10.1080/10485252.2023.2206919>. This work was supported 
+    by the U.S. National Science Foundation under Grants No. SES-1921523 and 
     DMS-2015552.
 License: GPL (>= 2)
 URL: https://docs.ropensci.org/melt/, https://github.com/ropensci/melt
