--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,9 @@
 Type: Package
 Package: melt
 Title: Multiple Empirical Likelihood Tests
-Version: 1.10.0.1
+Version: 1.10.0.9000
 Authors@R: c(
-    person("Eunseop", "Kim", email = "markean@pm.me", 
-            role = c("aut", "cre")),
+    person("Eunseop", "Kim", , "markean@pm.me", role = c("aut", "cph", "cre")),
     person("Steven", "MacEachern", role = c("ctb", "ths")),
     person("Mario", "Peruggia", role = c("ctb", "ths")),
     person("Pierre", "Chausse", role = "rev"),
@@ -14,12 +13,12 @@ Description: Performs multiple empirical likelihood tests for linear and
     generalized linear models. The package offers an easy-to-use interface
     and flexibility in specifying hypotheses and calibration methods,
     extending the framework to simultaneous inferences. The core
-    computational routines are implemented using the 'Eigen' C++ library
-    and 'RcppEigen' interface, with OpenMP for parallel computation.
+    computational routines are implemented using the 'Eigen' 'C++' library
+    and 'RcppEigen' interface, with 'OpenMP' for parallel computation.
     Details of the testing procedures are given in Kim, MacEachern, and
-    Peruggia (2023) <doi:10.1080/10485252.2023.2206919>. This work was supported 
-    by the U.S. National Science Foundation under Grants No. SES-1921523 and 
-    DMS-2015552.
+    Peruggia (2023) <doi:10.1080/10485252.2023.2206919>. This work was
+    supported by the U.S. National Science Foundation under Grants No.
+    SES-1921523 and DMS-2015552.
 License: GPL (>= 2)
 URL: https://docs.ropensci.org/melt/, https://github.com/ropensci/melt
 BugReports: https://github.com/ropensci/melt/issues
@@ -55,4 +54,4 @@ Language: en-US
 LazyData: true
 NeedsCompilation: yes
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.1
